--- a/generators/app/templates/base/.gitignore
+++ b/generators/app/templates/base/.gitignore
@@ -17,12 +17,13 @@ coverage
 .grunt
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+tar
 
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+src/bower_components
 
 # Users Environment Variables
 .lock-wscript
