--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.0.1",
     "private": false,
     "scripts": {
-        "preinstall": "npm install -g grunt-cli bower"
+        "preinstall": "npm install -g grunt-cli bower",
+        "test": "mocha --recursive --verbose --ui bdd --colors test/*.js",
+        "url": "https://github.com/rochejul"
     },
     "contributors": [
         {
@@ -19,11 +21,16 @@
     ],
     "keywords": [ "yeoman-generator", "es6", "es7", "esnext", "esnow", "yeoman", "traceur", "6to5", "grunt" ],
     "dependencies": {
-        "yeoman-generator": "^0.18.5"
+        "yeoman-generator": "^0.18.5",
+        "lodash": "3.1.0"
     },
     "peerDependencies": {
         "yo": ">=1.0.0",
         "grunt": ">=0.4.5"
+    },
+    "devDependencies": {
+        "mocha": "*",
+        "chai": "1.10.0"
     },
     "license": "MIT",
     "engines": {
