--- a/package.json
+++ b/package.json
@@ -1,40 +1,51 @@
 {
-    "name": "generator-project-esnow",
-    "description": "Yeoman generator to create ES next generation project (based on ES6 / ES2015, ES7 ...)",
-    "version": "0.0.1",
-    "private": false,
-    "scripts": {
-        "preinstall": "npm install -g grunt-cli bower",
-        "test": "mocha --recursive --verbose --ui bdd --colors test/*.js",
-        "url": "https://github.com/rochejul"
-    },
-    "contributors": [
-        {
-            "name": "Julien Roche",
-            "email": "roche.jul@gmail.com"
-        }
-    ],
-    "repository": "rochejul/generator-project-esnow",
-    "main": "generators/app/index.js",
-    "files": [
-        "generators"
-    ],
-    "keywords": [ "yeoman-generator", "es6", "es7", "esnext", "esnow", "yeoman", "traceur", "6to5", "grunt" ],
-    "dependencies": {
-        "yeoman-generator": "^0.18.5",
-        "lodash": "3.1.0"
-    },
-    "peerDependencies": {
-        "yo": ">=1.0.0",
-        "grunt": ">=0.4.5"
-    },
-    "devDependencies": {
-        "mocha": "*",
-        "chai": "1.10.0"
-    },
-    "license": "MIT",
-    "engines": {
-        "node": ">=0.10.33",
-        "npm": ">=1.4.28"
+  "name": "generator-project-esnow",
+  "description": "Yeoman generator to create ES next generation project (based on ES6 / ES2015, ES7 ...)",
+  "version": "0.0.1",
+  "private": false,
+  "scripts": {
+    "preinstall": "npm install -g grunt-cli bower",
+    "test": "mocha --recursive --verbose --ui bdd --colors test/*.js",
+    "url": "https://github.com/rochejul"
+  },
+  "contributors": [
+    {
+      "name": "Julien Roche",
+      "email": "roche.jul@gmail.com"
     }
+  ],
+  "repository": "rochejul/generator-project-esnow",
+  "main": "generators/app/index.js",
+  "files": [
+    "generators"
+  ],
+  "keywords": [
+    "yeoman-generator",
+    "es6",
+    "es7",
+    "esnext",
+    "esnow",
+    "yeoman",
+    "traceur",
+    "6to5",
+    "grunt"
+  ],
+  "dependencies": {
+    "lodash": "3.1.0",
+    "semver": "^4.3.0",
+    "yeoman-generator": "^0.18.5"
+  },
+  "peerDependencies": {
+    "yo": ">=1.0.0",
+    "grunt": ">=0.4.5"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "chai": "1.10.0"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">=0.10.33",
+    "npm": ">=1.4.28"
+  }
 }
