manage gulp and 6to5

--- a/generators/app/templates/base/bower.json
+++ b/generators/app/templates/base/bower.json
@@ -18,7 +18,7 @@
         "README*",
         "karma.conf.js",
         "Gruntfile.js",
-        "gruntfile.js",
+        "gulpfile.js",
         "bower.json",
         "package.json"
     ]
