--- a/generators/app/templates/gulp/traceur/package.json
+++ b/generators/app/templates/gulp/traceur/package.json
@@ -17,7 +17,7 @@
 
     "es6-module-loader": "0.11.2",
     "systemjs": "0.11.3",
-    "6to5": "3.5.3",
+    "traceur": "0.0.81",
 
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.2",
@@ -28,7 +28,6 @@
     "karma-6to5-preprocessor": "3.0.0",
 
     "gulp-util": "~3.0.3",
-    "gulp-6to5": "3.0.0",
     "gulp-sourcemaps": "~1.3.0",
     "gulp-clean": "~0.3.0",
     "gulp-concat": "~2.4.3",
