--- a/examples/grunt-babel/package.json
+++ b/examples/grunt-babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-babel",
-  "description": "a sample project with grunt and babel",
+  "description": "a sample project with babel and grunt",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
 
     "es6-module-loader": "0.11.2",
     "systemjs": "0.11.3",
-    "babel": "4.0.1",
 
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.2",
@@ -23,9 +22,7 @@
     "karma-coverage": "~0.2.7",
     "karma-jasmine": "~0.2.1",
     "karma-junit-reporter": "~0.2.1",
-    "karma-babel-preprocessor": "4.0.0",
 
-    "grunt-babel": "4.0.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
@@ -36,7 +33,11 @@
     "grunt-contrib-yuidoc": "~0.7.0",
 
     "load-grunt-configs": "~0.4.0",
-    "load-grunt-tasks": "~0.4.0"
+    "load-grunt-tasks": "~0.4.0",
+
+    "babel": "4.0.1",
+    "karma-babel-preprocessor": "4.0.0",
+    "grunt-babel": "4.0.0"
   },
   "license": "private",
   "engines": {
