--- a/examples/grunt-traceur/bower.json
+++ b/examples/grunt-traceur/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "grunt-traceur",
-    "description": "a sample project with grunt and traceur",
+    "description": "a sample project with traceur and grunt",
     "version": "1.0.0",
     "dependencies": {
     },
