--- a/examples/gulp-babel/package.json
+++ b/examples/gulp-babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-babel",
-  "description": "a sample project with gulp and babel",
+  "description": "a sample project with babel and gulp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,6 @@
 
     "es6-module-loader": "0.11.2",
     "systemjs": "0.11.3",
-    "babel": "4.0.1",
 
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.2",
@@ -25,10 +24,8 @@
     "karma-coverage": "~0.2.7",
     "karma-jasmine": "~0.2.1",
     "karma-junit-reporter": "~0.2.1",
-    "karma-babel-preprocessor": "4.0.0",
 
     "gulp-util": "~3.0.3",
-    "gulp-babel": "4.0.0",
     "gulp-sourcemaps": "~1.3.0",
     "gulp-clean": "~0.3.0",
     "gulp-concat": "~2.4.3",
@@ -39,7 +36,11 @@
     "gulp-jshint": "~1.9.2",
     "gulp-yuidoc": "~0.1.2",
 
-    "gulp-load-tasks": "~0.8.3"
+    "gulp-load-tasks": "~0.8.3",
+
+    "babel": "4.0.1",
+    "karma-babel-preprocessor": "4.0.0",
+    "gulp-babel": "4.0.0"
   },
   "license": "private",
   "engines": {
