--- a/examples/gulp-traceur/package.json
+++ b/examples/gulp-traceur/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-traceur",
-  "description": "a sample project with gulp and traceur",
+  "description": "a sample project with traceur and gulp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,6 @@
 
     "es6-module-loader": "0.11.2",
     "systemjs": "0.11.3",
-    "traceur": "0.0.81",
 
     "karma": "~0.12.0",
     "karma-chrome-launcher": "~0.1.2",
@@ -25,7 +24,6 @@
     "karma-coverage": "~0.2.7",
     "karma-jasmine": "~0.2.1",
     "karma-junit-reporter": "~0.2.1",
-    "karma-6to5-preprocessor": "3.0.0",
 
     "gulp-util": "~3.0.3",
     "gulp-sourcemaps": "~1.3.0",
@@ -38,7 +36,9 @@
     "gulp-jshint": "~1.9.2",
     "gulp-yuidoc": "~0.1.2",
 
-    "gulp-load-tasks": "~0.8.3"
+    "gulp-load-tasks": "~0.8.3",
+
+    "traceur": "0.0.81"
   },
   "license": "private",
   "engines": {
