--- a/generators/app/templates/grunt/common/package.json
+++ b/generators/app/templates/grunt/common/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "scripts": {
     "preinstall": "npm install -g grunt-cli",
+    "compile": "node node_modules/grunt-cli/bin/grunt compile",
+    "dist": "node node_modules/grunt-cli/bin/grunt dist",
+    "report": "node node_modules/grunt-cli/bin/grunt reports",
     "test": "node node_modules/grunt-cli/bin/grunt tests"
   },
   "contributors": [
