--- a/generators/app/templates/grunt/common/package.json
+++ b/generators/app/templates/grunt/common/package.json
@@ -32,7 +32,7 @@
     "grunt-combine": "~0.8.3",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-karma": "~0.8.3",
-    "grunt-contrib-jshint": "~0.11.0",
+<%= linting.npmDependencies %>
     "grunt-contrib-yuidoc": "~0.7.0",
 
     "load-grunt-configs": "~0.4.0",
