--- a/generators/app/templates/gulp/common/package.json
+++ b/generators/app/templates/gulp/common/package.json
@@ -8,7 +8,9 @@
     "compile": "node node_modules/gulp/bin/gulp.js compile",
     "dist": "node node_modules/gulp/bin/gulp.js dist",
     "report": "node node_modules/gulp/bin/gulp.js reports",
-    "test": "node node_modules/gulp/bin/gulp.js tests"
+    "test": "node node_modules/gulp/bin/gulp.js tests",
+    "bower": "node node_modules/bower/bin/bower",
+    "gulp": "node node_modules/gulp/bin/gulp.js"
   },
   "contributors": [
   ],
