--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "lodash": "3.1.0",
     "semver": "4.3.2",
-    "yeoman-generator": "0.18.5"
+    "yeoman-generator": "0.18.5",
+    "node-const": "0.2.1"
   },
   "peerDependencies": {
     "yo": ">=1.0.0",
